Sync all content

--- a/content/resources/21g-880f13-th.md
+++ b/content/resources/21g-880f13-th.md
@@ -5,9 +5,11 @@ description: A view from Corcovado, a mountain in Rio de Janeiro, Brazil. Image 
 file: /courses/21g-880-accelerated-introductory-portuguese-for-spanish-speakers-fall-2013/604a79aac9e05c133257ba7f72728e5e_21g-880f13-th.jpg
 file_size: 12074
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: A view from Corcovado, a mountain in Rio de Janeiro, Brazil. (Image courtesy
-    of {{% resource_link "b3f1cbae-32f9-47a9-a992-a780a08d9356" "Boris G" %}} on Flickr.
+    of [Boris G](http://www.flickr.com/photos/gameoflight/13487044285/) on Flickr.
     CC NC-BY-SA.)
   credit: Image courtesy of Boris G on Flickr. CC NC-BY-SA.
   image-alt: A photograph with a cap that says "Brasil" in the foreground, with the
