--- a/content/resources/21g-880f13-th.md
+++ b/content/resources/21g-880f13-th.md
@@ -5,11 +5,9 @@ description: A view from Corcovado, a mountain in Rio de Janeiro, Brazil. Image 
 file: /courses/21g-880-accelerated-introductory-portuguese-for-spanish-speakers-fall-2013/604a79aac9e05c133257ba7f72728e5e_21g-880f13-th.jpg
 file_size: 12074
 file_type: image/jpeg
-hide_download: true
-hide_download_original: null
 image_metadata:
   caption: A view from Corcovado, a mountain in Rio de Janeiro, Brazil. (Image courtesy
-    of [Boris G](http://www.flickr.com/photos/gameoflight/13487044285/) on Flickr.
+    of {{% resource_link "6a81a23c-2634-4117-a8ef-e48e6abebdb3" "Boris G" %}} on Flickr.
     CC NC-BY-SA.)
   credit: Image courtesy of Boris G on Flickr. CC NC-BY-SA.
   image-alt: A photograph with a cap that says "Brasil" in the foreground, with the
